booking service for test db query implemenation started
